--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,6 @@
 @import "./utils/variables";
+@import "./utils/mixins";
+@import "./components/cards";
+@import "./components/btn";
+@import "./pages/homepage";
+@import "./layouts/general";
