--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,77 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Shrikhand&display=swap");
+.btn {
+  background: #ff79da;
+  background: -moz-linear-gradient(180deg, #ff79da 0%, #ba62db 100%);
+  background: -webkit-linear-gradient(180deg, #ff79da 0%, #ba62db 100%);
+  background: linear-gradient(180deg, #ff79da 0%, #ba62db 100%);
+  padding: 20px;
+  color: #FFF;
+  font-family: "Roboto";
+  text-decoration: none;
+  border-radius: 50px;
+}
 
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 65px;
+  position: relative;
+  box-shadow: 0 5px 2px -1px #5651511f;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 50px;
+  background-color: #EAEAEA;
+}
+.location i {
+  padding-right: 20px;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: #F6F6F6;
+  height: 290px;
+}
+.hero h1 {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.container {
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1, h2 {
+  font-family: "Roboto";
+  font-weight: 700;
+}
+
+p {
+  font-family: "Roboto";
+}
+
+.onboarding-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /*# sourceMappingURL=style.css.map */
