--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -1,33 +1,114 @@
-header{
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 65px;
+  position: relative;
+  box-shadow: 0 5px 2px -1px #5651511f;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 50px;
+  background-color: #eaeaea;
+  & i {
+    padding-right: 20px;
+  }
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: #f6f6f6;
+  height: 290px;
+  h1 {
+    margin: 0;
+  }
+}
+
+.onboarding {
+  &-list {
+    display: flex;
+    justify-content: space-evenly;
+    @media (max-width: 992px) {
+      flex-direction: column;
+      margin-bottom: 2em;
+    }
+  }
+  &-list_cards {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 65px;
+    flex-wrap: wrap;
+    background-color: #f6f6f6;
+    padding: 25px;
+    border-radius: 10px;
     position: relative;
-    box-shadow: 0 5px 2px -1px #5651511f;
+
+    i {
+      padding-right: 30px;
+      color: #7e7e7e;
+    }
+    .number {
+      position: absolute;
+      left: -8%;
+      width: 30px;
+      height: 30px;
+      text-align: center;
+      padding: 5px;
+      background-color: $color-primary;
+      color: #fff;
+      border-radius: 50%;
+    }
+    &:hover {
+      background-color: #f5edff;
+      i {
+        color: $color-primary;
+      }
+    }
+  }
 }
 
-.location{
+.restaurants {
+  background-color: #f6f6f6;
+  &-container{
+      display: flex;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+  }
+  &-card {
+    background-color: #FFF;
+    border-radius: 10px;
+    width: 335px;
+    box-shadow: -2px 5px 16px -4px rgba(0,0,0,0.75);
+    margin-bottom: 2em;
+    img {
+      width: 335px;
+      height: 175px;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      margin: auto;
+      object-fit: cover;
+    }
+  }
+
+  &-content {
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 50px;
-    background-color: #EAEAEA ;
-    & i{
-        padding-right: 20px;
-    }
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 20px;
+  }
 }
 
-.hero{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-        background-color: #F6F6F6;
-        height: 290px;
-    h1{
-        margin: 0;
-    }
+footer {
+  .logofooter {
+    fill: #fff;
+  }
 }
