--- a/sass/layouts/_general.scss
+++ b/sass/layouts/_general.scss
@@ -6,7 +6,7 @@
   body{
       margin: 0;
   }
-  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Shrikhand&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&family=Shrikhand&display=swap');
 
 .container{
     margin: 0 auto;
@@ -18,11 +18,37 @@ h1, h2{
     font-weight: 700;
 }
 
-p{
+p, a{
     font-family: "Roboto";
 }
 
 
-footer{
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    position: relative;
+    box-shadow: 0 5px 2px -1px #5651511f;
+    a{
+        align-self: flex-start;
+    }
+  }
+
+footer {
     background-color: #353535;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    .logofooter {
+      fill: #fff;
+    }
+    a{
+      color: #FFF;
+      text-decoration: none;
+    }
+    i{
+      padding-right: 10px;
+    }
+  }
+  
