--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -1,11 +1,4 @@
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 65px;
-  position: relative;
-  box-shadow: 0 5px 2px -1px #5651511f;
-}
+
 
 .location {
   display: flex;
@@ -29,6 +22,19 @@ header {
   height: 290px;
   h1 {
     margin: 0;
+    font-size: 2.5em;
+    @media (max-width: 768px){
+      width: 220px;
+      font-size: 1.5em;
+    }
+  }
+  p{
+    font-weight: 300;
+    font-size: 1.6em;
+    @media (max-width: 768px){
+      width: 280px;
+      font-size: 1em;
+    }
   }
 }
 
@@ -50,7 +56,7 @@ header {
     padding: 25px;
     border-radius: 10px;
     position: relative;
-
+    margin-bottom: 15px;
     i {
       padding-right: 30px;
       color: #7e7e7e;
@@ -65,6 +71,9 @@ header {
       background-color: $color-primary;
       color: #fff;
       border-radius: 50%;
+      @media (max-width: 768px){
+        left: -4%;
+      }
     }
     &:hover {
       background-color: #f5edff;
@@ -86,8 +95,13 @@ header {
     background-color: #FFF;
     border-radius: 10px;
     width: 335px;
-    box-shadow: -2px 5px 16px -4px rgba(0,0,0,0.75);
+    box-shadow: -2px 5px 16px -4px rgba(0, 0, 0, 0.301);
     margin-bottom: 2em;
+    a{
+      text-decoration: none;
+      color: #000;
+    }
+    
     img {
       width: 335px;
       height: 175px;
@@ -104,11 +118,41 @@ header {
     justify-content: space-between;
     padding-left: 15px;
     padding-right: 20px;
+    h2{
+      margin: 0;
+      padding-top: 10px;
+      
+    }
+    p{
+      margin: 0;
+      padding-top: 10px;
+      padding-bottom: 20px;
+    }
+  }
+  &-content_heart{
+    .fa-heart{
+      &:hover{
+        &::before{
+          content: "\f004";
+          background:-webkit-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+      }
+      
+    }
+   i{
+    font-size: 1.3em;
+    // &:hover{
+    //   color: transparent;
+    //   background: rgb(255,121,218);
+    //   background: -moz-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+    //   background: -webkit-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+    //   background: linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+    //   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#ba62db",GradientType=1);;
+    // }
+   } 
+   
   }
 }
 
-footer {
-  .logofooter {
-    fill: #fff;
-  }
-}
