--- a/sass/layouts/_general.scss
+++ b/sass/layouts/_general.scss
@@ -11,6 +11,7 @@
 .container{
     margin: 0 auto;
     padding: 20px;
+    max-width: 1920px;
 }
 
 h1, h2{
@@ -31,7 +32,10 @@ header {
     position: relative;
     box-shadow: 0 5px 2px -1px #5651511f;
     a{
-        align-self: flex-start;
+        position: absolute;
+        left: 20px;
+        color: #000;
+        
     }
   }
 
@@ -39,13 +43,22 @@ footer {
     background-color: #353535;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    align-items: center;
+    @media (max-width: 768px){
+      align-items: flex-start;
+    }
     .logofooter {
-      fill: #fff;
+      color: #fff;
+      width: 120px;
+      svg path{
+        fill: #FFF !important;
+      }
     }
     a{
       color: #FFF;
       text-decoration: none;
+      width: fit-content;
+      padding: 5px;
     }
     i{
       padding-right: 10px;
