--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -42,6 +42,9 @@
   &-list {
     display: flex;
     justify-content: space-evenly;
+    padding-left: 20px;
+    padding-right: 20px;
+    
     @media (max-width: 992px) {
       flex-direction: column;
       margin-bottom: 2em;
@@ -49,21 +52,22 @@
   }
   &-list_cards {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     background-color: #f6f6f6;
-    padding: 25px;
-    border-radius: 10px;
+    padding: 20px 35px 20px 35px;
+    border-radius: 20px;
     position: relative;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
+    font-weight: 700;
     i {
       padding-right: 30px;
       color: #7e7e7e;
     }
     .number {
       position: absolute;
-      left: -8%;
+      left: 0;
+      transform: translate(-15px);
       width: 30px;
       height: 30px;
       text-align: center;
@@ -71,9 +75,6 @@
       background-color: $color-primary;
       color: #fff;
       border-radius: 50%;
-      @media (max-width: 768px){
-        left: -4%;
-      }
     }
     &:hover {
       background-color: #f5edff;
@@ -90,6 +91,8 @@
       display: flex;
       justify-content: space-evenly;
       flex-wrap: wrap;
+      max-width: 860px;
+      margin: 0 auto;
   }
   &-card {
     background-color: #FFF;
@@ -97,6 +100,22 @@
     width: 335px;
     box-shadow: -2px 5px 16px -4px rgba(0, 0, 0, 0.301);
     margin-bottom: 2em;
+    position: relative;
+    &.new{
+      &::after{
+        content: 'Nouveau';
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        font-family: 'Roboto';
+        font-weight: 700;
+        background-color: $color-greenmint;
+        color: #008766;
+        padding: 10px;
+        border-radius: 2px;
+      }
+    }
+    
     a{
       text-decoration: none;
       color: #000;
@@ -125,8 +144,8 @@
     }
     p{
       margin: 0;
-      padding-top: 10px;
-      padding-bottom: 20px;
+      padding-top: 5px;
+      padding-bottom: 15px;
     }
   }
   &-content_heart{
