--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,5 @@
 @import "./components/cards";
 @import "./components/btn";
 @import "./pages/homepage";
+@import "./pages/menus";
 @import "./layouts/general";
