--- a/sass/layouts/_general.scss
+++ b/sass/layouts/_general.scss
@@ -7,7 +7,7 @@
       margin: 0;
   }
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&family=Shrikhand&display=swap');
-
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&family=Shrikhand&display=swap');
 .container{
     margin: 0 auto;
     padding: 20px;
@@ -65,3 +65,21 @@ footer {
     }
   }
   
+
+  .fa-heart{
+    font-size: 1.3em;
+    
+    &:hover{
+      font-weight: 900;
+      color: transparent;
+      background:-webkit-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    &:focus{
+      color: transparent;
+      background:-webkit-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+   } 
