--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/animation";
 @import "./components/cards";
 @import "./components/btn";
 @import "./pages/homepage";
