--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -101,6 +101,9 @@
     box-shadow: -2px 5px 16px -4px rgba(0, 0, 0, 0.301);
     margin-bottom: 2em;
     position: relative;
+    @media (max-width: 768px){
+      width: 100%;
+    }
     &.new{
       &::after{
         content: 'Nouveau';
@@ -122,7 +125,7 @@
     }
     
     img {
-      width: 335px;
+      width: 100%;
       height: 175px;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
