--- a/public/css/style.css
+++ b/public/css/style.css
@@ -299,6 +299,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-transform: capitalize;
 }
 .menu-btn {
   display: flex;
