--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -112,6 +112,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        text-transform: capitalize;
       }
       
     }
