--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -1,4 +1,5 @@
 .menu {
+  margin-bottom: -60px;
   img {
     width: 100%;
     height: 30vh;
@@ -11,6 +12,7 @@
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     transform: translate(0px, -60px);
+    
 
     h1 {
       font-family: "Shrikhand", cursive;
@@ -121,6 +123,7 @@
     justify-content: center;
     text-align: center;
     margin-top: 4em;
+    margin-bottom: 4em;
     .btn {
       display: block;
       width: 100%;
