--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,9 @@
   -webkit-text-fill-color: transparent;
 }
 
+.menu {
+  margin-bottom: -60px;
+}
 .menu img {
   width: 100%;
   height: 30vh;
@@ -305,6 +308,7 @@
   justify-content: center;
   text-align: center;
   margin-top: 4em;
+  margin-bottom: 4em;
 }
 .menu-btn .btn {
   display: block;
@@ -434,7 +438,6 @@ footer i {
   height: 120px;
   animation: rotate 1s linear infinite;
   position: absolute;
-  top: 15%;
 }
 
 .loaderout {
@@ -444,6 +447,8 @@ footer i {
   animation: fadeout 0.2s linear;
   animation-delay: 2.5s;
   animation-fill-mode: both;
+  width: 99vw;
+  height: 100vh;
 }
 
 /*# sourceMappingURL=style.css.map */
