--- a/sass/layouts/_general.scss
+++ b/sass/layouts/_general.scss
@@ -107,7 +107,7 @@ footer {
     height: 120px;
     animation: rotate 1s linear infinite;
     position: absolute; 
-    top: 15%;
+    
 
   }
 
@@ -118,4 +118,6 @@ footer {
     animation: fadeout 0.2s linear;
     animation-delay: 2.5s;
     animation-fill-mode: both;
+    width: 99vw;
+    height: 100vh;
   }
