--- a/sass/layouts/_general.scss
+++ b/sass/layouts/_general.scss
@@ -82,13 +82,16 @@ footer {
 
   .fa-heart{
     font-size: 1.3em;
+    
     &:hover{
+      animation: bgcolor 0.5s;
       font-weight: 900;
-      color: transparent;
       background:-webkit-linear-gradient(13deg, rgba(255,121,218,1) 0%, rgba(186,98,219,1) 66%);
+      color: transparent;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      
+     cursor: pointer;
+     
       
     }
    } 
